tests/ui/non_trait.rs
use client_handle::async_tokio_handle;

#[async_tokio_handle]
struct SomeStruct;

#[async_tokio_handle]
enum SomeEnum {}

fn main() {}